Fix spacing and alignment of search box

--- a/style.css
+++ b/style.css
@@ -68,6 +68,9 @@ main {
 
 label[for="search"] {
     margin-right: auto;
+    display: flex;
+    align-items: center;
+    gap: 8px;
 }
 
 .search-icon {
